<resources>
    <string name="app_name">Recon Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="tabConnect">Connect</string>
    <string name="tabGraphs">Graphs</string>
    <string name="tabDefaults">Defaults</string>
    <string name="tabReport">Report</string>
    <string name="tabCompany">Company</string>
    <string name="tabSettings">Settings</string>
    <string name="Logo">TODO</string>
    <string name="rad_elec_recon_mobile_logo">Rad Elec Recon Mobile Logo</string>
    <string name="about">About</string>
    <string name="website">www.radelec.com</string>
    <string name="email_radelec">info@radelec.com</string>
    <string name="close_about_window">Close About Window</string>
    <string name="my_company">My Company</string>
    <string name="exit">Exit</string>
    <string name="recon_ivory_logo">Recon Ivory Logo</string>
    <string name="v">v?</string>
    <string name="unknown_build_date">Unknown Build Date</string>
    <string name="instrument_location">Instrument Location</string>
    <string name="customer_information_address">Customer Information / Address</string>
    <string name="test_site_information_address">Test Site Information / Address</string>
    <string name="customer_email">Email</string>
    <string name="deployed_by">Deployed By</string>
    <string name="retrieved_by">Retrieved By</string>
    <string name="analyzed_by">Analyzed By</string>
    <string name="protocol">Protocol</string>
    <string name="tampering">Tampering</string>
    <string name="weather">Weather</string>
    <string name="mitigation">Mitigation</string>
    <string name="report_comment">Comment</string>
    <string name="report_text">Report Text</string>
    <string name="settings">Settings</string>
    <string name="save_file">Save</string>
    <string name="report_bugs">Report Bugs!</string>
    <string name="graph_radon">Radon</string>
    <string name="graph_pressure">Pressure</string>
    <string name="graph_humidity">Humidity</string>
    <string name="graph_tilts">Tilts</string>
    <string name="graph_temp">Temp</string>
    <string name="company_name">Company Name</string>
    <string name="company_details">Company Address / Details</string>
    <string name="company_email">Company Email</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_logo_hint">If importing a company logo, it will appear on your letterhead.</string>
    <string name="company_logo_image">Click here to import your company logo.</string>
    <string name="clear_logo">Clear Logo</string>
    <string name="analyst_signature">Analyst Signature</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="unit_system">Unit System</string>
    <string name="auto_clear_sessions">Auto-Clear Sessions?</string>
    <string name="signature_options">Signature Options</string>
    <string name="tilt_sensitivity">Tilt Sensitivity</string>
    <string name="tilt_sensitivity_low">Low</string>
    <string name="tilt_sensitivity_high">High</string>
    <string name="tilt_value">Tilt Value</string>
    <string name="recon_display_options">Recon Display Options</string>
    <string name="report_options">Report Options</string>
    <string name="page_size">Page Size</string>
    <string name="display_pressure">Pressure</string>
    <string name="display_temperature">Temperature</string>
    <string name="display_radon">Radon</string>
    <string name="close_search_window">Close Search Window</string>
    <string name="close_file_window">Close File Window</string>
    <string name="no_recon_connected">No Recon Connected</string>
    <string name="download">Download</string>
    <string name="clear">Clear</string>
    <string name="close_file">Close File</string>
    <string name="system_console">System Console</string>
    <string-array name="spinnerUnitSystem">
        <item>US</item>
        <item>SI</item>
    </string-array>
    <string-array name="spinnerAutoClearSessions">
        <item>Always</item>
        <item>Never</item>
        <item>Prompt</item>
    </string-array>
    <string-array name="spinnerPageSize">
        <item>A4</item>
        <item>LEGAL</item>
        <item>LETTER</item>
    </string-array>
    <string-array name="spinnerSignatureOptions">
        <item>Display Line Only</item>
        <item>Digitally Signed</item>
        <item>No Signature</item>
    </string-array>
    <string-array name="spinnerDisplay_Pressure">
        <item>inHg</item>
        <item>mBar</item>
    </string-array>
    <string-array name="spinnerDisplay_Temperature">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string-array name="spinnerDisplay_Radon">
        <item>pCi/L</item>
        <item>Bq/m³</item>
        <item>Counts/hr</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recon_search_list">Recon Search List</string>
    <string name="delete_data_file">Delete Data File</string>
    <string name="email_pdf">Email PDF</string>
</resources>
