<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAbout"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imgCloseAbout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:clickable="true"
        android:contentDescription="@string/close_about_window"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="437dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageReconIvoryLogo"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/recon_ivory_logo"
            app:srcCompat="@drawable/recon_logo_ivory" />

        <TextView
            android:id="@+id/aboutVersionBuild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/v"
            android:textColor="@color/colorIvoryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutVersionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/unknown_build_date"
            android:textColor="@color/colorIvoryText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/website_radelec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/website"
            android:textColor="@color/colorIvoryText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/phone_radelec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/email_radelec"
            android:textColor="@color/colorIvoryText"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>