<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:tag="fragSettings"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_clear_sessions"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_autoclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/spinnerAutoClearSessions"
                android:focusable="true"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_system"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/spinnerUnitSystem"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/txtSignatureOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/signature_options"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_signatureoptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/spinnerSignatureOptions" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtSensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tilt_sensitivity"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekbarTiltSensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/txtSensitivity_Details_Low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="start"
                    android:text="@string/tilt_sensitivity_low"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTiltValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tilt_value"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/txtSensitivity_Details_High"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:text="@string/tilt_sensitivity_high"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/txtReconDisplayOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/recon_display_options"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_radon"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_display_radon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/spinnerDisplay_Radon"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_temperature"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_display_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/spinnerDisplay_Temperature"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_pressure"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_display_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/spinnerDisplay_Pressure"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>