<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:weightSum="10">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorIvoryText"
            app:tabIndicatorHeight="5dp"
            app:tabMode="fixed"
            app:tabPaddingEnd="10dp"
            app:tabPaddingStart="10dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabConnect" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabGraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabGraphs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabDefaults" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorIvoryText"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="auto"
        app:srcCompat="@drawable/ic_email_ivory_24dp"
        android:contentDescription="TODO" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartRadonPDF"
        android:layout_width="800dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartHumidityPDF"
        android:layout_width="800dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartPressurePDF"
        android:layout_width="800dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartTiltsPDF"
        android:layout_width="800dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>